# safte-monitor

./: CHANGELOG  Makefile.in  README  README.html  configure  configure.in  mkinstalldirs
debian/: changelog  control  copyright
etc/: safte-monitor.conf.m4  safte-monitor.passwd
lib/: alert
lib/www/: index.url  safte-monitor.css
man/: safte-monitor.8
mathopd-1.3pl7-lite/: base64.c  config.c  core.c  main.c  mathopd.h  redirect.c  request.c  util.c
src/: qlogic_api.c  qlogic_api.h  safte-monitor.c  safte-monitor.h  scsi_api.c  scsi_api.h
