dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/safte-monitor.c)

AC_ARG_WITH(safte-monitor-user,
	[  --with-safte-monitor-user=USERID (default daemon)],
        safte_monitor_user="$withval",safte_monitor_user="daemon")
AC_SUBST(safte_monitor_user)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

dnl Checks for libraries.
dnl Replace `main' with a function in -ldmalloc:
AC_CHECK_LIB(dmalloc, dmalloc_shutdown)

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h limits.h sys/time.h syslog.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM
AC_TYPE_UID_T

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_TYPE_SIGNAL
AC_FUNC_STRFTIME
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(select socket strdup strerror strtoul)

AC_OUTPUT(Makefile)
